# python-essential-training-4314028

./: .nvim.lua  pyproject.toml
exercise_files/: 01_05_JupyterNotebook.ipynb  01_05_JupyterNotebook.py  02_01_Basic_Data_Types.ipynb  02_01_Basic_Data_Types.py  02_02_Data_Structures.py  02_03_Operators.ipynb  02_03_Operators.py  02_04_ControlFlow.ipynb  02_04_ControlFlow.py  02_05_Functions.ipynb  02_05_Functions.py  02_06_Classes_and_Instances.ipynb  02_06_Classes_and_Instances.py  02_07_Challenge.ipynb  02_07_Challenge.py  02_07_Challenge_Hints.ipynb  02_07_Challenge_Hints.py  02_08_Solution.ipynb  02_08_Solution.py  03_01_Ints_and_Floats.ipynb  03_01_Ints_and_Floats.py  03_02_Other_Numbers.ipynb  03_02_Other_Numbers.py  03_03_Booleans.ipynb  03_03_Booleans.py  03_04_Strings.ipynb  03_04_Strings.py  03_05_bytes.ipynb  03_05_bytes.py  03_06_Challenge.ipynb  03_06_Challenge.py  03_06_Challenge_Hints.ipynb  03_06_Challenge_Hints.py  03_07_Solution.ipynb  03_07_Solution.py  04_01_lists.ipynb  04_01_lists.py  04_02_Tuples_and_sets.ipynb  04_02_Tuples_and_sets.py  04_03_Dictionaries.ipynb  (+74 more)
exercise_files/.ipynb_checkpoints/: 01_05_JupyterNotebook-checkpoint.ipynb  02_01_Basic_Data_Types-checkpoint.ipynb  02_02_Data_Structures-checkpoint.ipynb  02_03_Operators-checkpoint.ipynb  02_04_ControlFlow-checkpoint.ipynb  02_05_Functions-checkpoint.ipynb  02_07_Challenge-checkpoint.ipynb  02_07_Challenge_Hints-checkpoint.ipynb  02_08_Solution-checkpoint.ipynb  03_01_Ints_and_Floats-checkpoint.ipynb  03_02_Other_Numbers-checkpoint.ipynb  03_03_booleans-checkpoint.ipynb  03_04_Strings-checkpoint.ipynb  03_05_bytes-checkpoint.ipynb  03_06_Challenge-checkpoint.ipynb  03_07_Solution-checkpoint.ipynb  04_01_lists-checkpoint.ipynb  04_02_Tuples_and_sets-checkpoint.ipynb  04_03_Dictionaries-checkpoint.ipynb  04_04_List_Comprehensions-checkpoint.ipynb  04_05_Dictionary_Comprehensions-checkpoint.ipynb  04_07_Solution-checkpoint.ipynb  05_01_IfElseIfelse-checkpoint.ipynb  05_02_while-checkpoint.ipynb  05_03_ForLoops-checkpoint.ipynb  05_04_Challenge-checkpoint.ipynb  05_04_Challenge_Hints-checkpoint.ipynb  05_05_Solution-checkpoint.ipynb  06_01_AnatomyOfAFunction-checkpoint.ipynb  06_02_VariablesAndScope-checkpoint.ipynb  06_03_VariablesAsFunctions-checkpoint.ipynb  06_04_Challenge-checkpoint.ipynb  06_04_Challenge_Hints-checkpoint.ipynb  06_05_Solution-checkpoint.ipynb  07_01_AnatomyOfAClass-checkpoint.ipynb  07_02_StaticMethods-checkpoint.ipynb  07_03_ClassInheritance-checkpoint.ipynb  07_04_Challenge-checkpoint.ipynb  07_04_Challenge_Hints-checkpoint.ipynb  07_05_Solution-checkpoint.ipynb  (+11 more)
